--- a/QALegend/test-output/index.html
+++ b/QALegend/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,7 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">8 methods, 1 failed,   7 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendLoginTest" class="method navigator-link" hash-for-method="loginuserlogin">loginuserlogin</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -128,17 +142,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendLoginTest" class="method navigator-link" hash-for-method="loginuserlogin">loginuserlogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendSignupTest" class="method navigator-link" hash-for-method="registeringUser">registeringUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendSignupTest" class="method navigator-link" hash-for-method="signup">signup</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendLoginTest" class="method navigator-link" hash-for-method="urlValidation">urlValidation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendSignupTest" class="method navigator-link" hash-for-method="signedupUserSignin">signedupUserSignin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -153,9 +162,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">TestScript.QALegendLoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -164,17 +173,15 @@
                   <a name="loginuserlogin">
                   </a> <!-- loginuserlogin -->
                   <span class="method-name">loginuserlogin</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="urlValidation">
-                  </a> <!-- urlValidation -->
-                  <span class="method-name">urlValidation</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [https://qalegend.com/crm/index.php/signin] but found [https://qalegend.com/crm/index.php/dashboard]
+	at TestScript.QALegendLoginTest.loginuserlogin(QALegendLoginTest.java:19)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -183,9 +190,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="signup">
-                  </a> <!-- signup -->
-                  <span class="method-name">signup</span>
+                  <a name="registeringUser">
+                  </a> <!-- registeringUser -->
+                  <span class="method-name">registeringUser</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="signedupUserSignin">
+                  </a> <!-- signedupUserSignin -->
+                  <span class="method-name">signedupUserSignin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -319,35 +333,35 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'editDashboard')
 data.setCell(0, 2, 'TestScript.QALegendHomePageTest')
-data.setCell(0, 3, 18900);
+data.setCell(0, 3, 23617);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'createTicket')
 data.setCell(1, 2, 'TestScript.QALegendTicketsTest')
-data.setCell(1, 3, 11058);
+data.setCell(1, 3, 18976);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createnewDashboard')
-data.setCell(2, 2, 'TestScript.QALegendHomePageTest')
-data.setCell(2, 3, 10273);
+data.setCell(2, 1, 'createEstimate')
+data.setCell(2, 2, 'TestScript.QALegendEstimatesTest')
+data.setCell(2, 3, 15062);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'createEstimate')
-data.setCell(3, 2, 'TestScript.QALegendEstimatesTest')
-data.setCell(3, 3, 9995);
+data.setCell(3, 1, 'createnewDashboard')
+data.setCell(3, 2, 'TestScript.QALegendHomePageTest')
+data.setCell(3, 3, 15055);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'addanEvent')
 data.setCell(4, 2, 'TestScript.QALegendEventTest')
-data.setCell(4, 3, 9242);
+data.setCell(4, 3, 11818);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'signup')
+data.setCell(5, 1, 'registeringUser')
 data.setCell(5, 2, 'TestScript.QALegendSignupTest')
-data.setCell(5, 3, 5514);
+data.setCell(5, 3, 6498);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'loginuserlogin')
-data.setCell(6, 2, 'TestScript.QALegendLoginTest')
-data.setCell(6, 3, 2341);
+data.setCell(6, 1, 'signedupUserSignin')
+data.setCell(6, 2, 'TestScript.QALegendSignupTest')
+data.setCell(6, 3, 4260);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'urlValidation')
+data.setCell(7, 1, 'loginuserlogin')
 data.setCell(7, 2, 'TestScript.QALegendLoginTest')
-data.setCell(7, 3, 103);
+data.setCell(7, 3, 3961);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -385,79 +399,113 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addanEvent</span>
-                <span class="method-start">15569 ms</span>
+                <span class="method-start">29729 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">41547 ms</span>
+              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendSignupTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">24843 ms</span>
+                <span class="method-start">42721 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">signup</span>
-                <span class="method-start">42129 ms</span>
+                <span class="method-name">registeringUser</span>
+                <span class="method-start">64242 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">70747 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">browserinitialization</span>
+                <span class="method-start">71882 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">signedupUserSignin</span>
+                <span class="method-start">101833 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">106098 ms</span>
+              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">47658 ms</span>
+                <span class="method-start">106996 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">loginuserlogin</span>
-                <span class="method-start">65963 ms</span>
+                <span class="method-start">136628 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">browserinitialization</span>
-                <span class="method-start">68310 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">urlValidation</span>
-                <span class="method-start">93065 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">140594 ms</span>
+              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendHomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">93173 ms</span>
+                <span class="method-start">141561 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createnewDashboard</span>
-                <span class="method-start">113995 ms</span>
+                <span class="method-start">162682 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">177737 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">124268 ms</span>
+                <span class="method-start">178078 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">editDashboard</span>
-                <span class="method-start">148652 ms</span>
+                <span class="method-start">207444 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">231061 ms</span>
+              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendEstimatesTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">167552 ms</span>
+                <span class="method-start">232227 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createEstimate</span>
-                <span class="method-start">185817 ms</span>
+                <span class="method-start">260446 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">275508 ms</span>
+              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendTicketsTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">195814 ms</span>
+                <span class="method-start">275950 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createTicket</span>
-                <span class="method-start">221261 ms</span>
+                <span class="method-start">294027 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">313006 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
